apps/locust/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  labels:
    app: locust
spec:
  type: ClusterIP
  selector:
    app: locust
  ports:
    - port: 80
      targetPort: 8089
      name: web
